Refactor Chatbase config and form schema
Updated Chatbase configuration and improved form schema for better clarity and functionality.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
     body { font-family: system-ui, Arial, sans-serif; margin: 40px; }
     main { max-width: 780px; margin: auto; }
   </style>
+
+  <!-- Chatbase config MUST be defined before loading embed.min.js -->
+  <script>
+    window.chatbaseConfig = {
+      agentId: "XVyXRXhG6vCPUR_KFObQL"
+      // If your dashboard shows chatbotId instead of agentId, use:
+      // chatbotId: "..."
+    };
+  </script>
+  <script
+    src="https://www.chatbase.co/embed.min.js"
+    id="chatbase-script"
+    defer
+  ></script>
 </head>
 <body>
   <main>
     <h1>Virtual School Demo</h1>
     <p>Test the EduSmartBot on this page.</p>
   </main>
-
-  <!-- Chatbase widget (official embed) -->
-  <script>
-    // Utiliser l'ID de l'agent fourni par Deploy → Web Widget
-    window.chatbaseConfig = {
-      agentId: "XVyXRXhG6vCPUR_KFObQL"
-      // chatbotId: "..." // utilisez l'une OU l'autre clé selon le script officiel
-    };
-  </script>
-  <script src="https://www.chatbase.co/embed.min.js" id="chatbase-script" defer></script>
 
   <!-- Client-side Custom Form schema -->
   <script>
@@ -33,7 +37,7 @@
     const ACTION_NAME = 'pre_enrolment_form';
     let registered = false;
 
-    // Attente que Chatbase expose registerFormSchema
+    // Wait for Chatbase to expose registerFormSchema
     function waitForChatbase(callback, maxAttempts = 50, interval = 120) {
       let attempts = 0;
       const poll = setInterval(() => {
@@ -51,45 +55,79 @@
       }, interval);
     }
 
-    // UI du formulaire (on garde prénom/nom à l'écran),
-    // mais on renverra "full_name" au backend lors de la soumission
+    // UI schema: first_name / last_name on screen,
+    // but we send full_name to the backend via transformPayload
     function preEnrolmentSchema() {
       return {
         fields: [
-          { type: 'text', name: 'first_name', label: 'First name',
+          {
+            type: 'text',
+            name: 'first_name',
+            label: 'First name',
             placeholder: 'Enter your first name',
-            validation: { required: { value: true, message: 'First name is required' } }
+            validation: {
+              required: { value: true, message: 'First name is required' }
+            }
           },
-          { type: 'text', name: 'last_name', label: 'Last name',
+          {
+            type: 'text',
+            name: 'last_name',
+            label: 'Last name',
             placeholder: 'Enter your last name',
-            validation: { required: { value: true, message: 'Last name is required' } }
+            validation: {
+              required: { value: true, message: 'Last name is required' }
+            }
           },
-          { type: 'text', name: 'email', label: 'Email',
+          {
+            type: 'text',
+            name: 'email',
+            label: 'Email',
             placeholder: 'you@example.com',
-            validation: { required: { value: true, message: 'Email is required' } }
+            validation: {
+              required: { value: true, message: 'Email is required' }
+            }
           },
-          { type: 'text', name: 'phone', label: 'Phone (+CC…)',
+          {
+            type: 'text',
+            name: 'phone',
+            label: 'Phone (+CC…)',
             placeholder: 'e.g., +971501234567',
-            validation: { required: { value: true, message: 'Phone number is required' } }
+            validation: {
+              required: { value: true, message: 'Phone number is required' }
+            }
           },
-          { type: 'text', name: 'program_interest', label: 'Target program',
+          {
+            type: 'text',
+            name: 'program_interest',
+            label: 'Target program',
             placeholder: 'e.g., Business Administration',
-            validation: { required: { value: true, message: 'Program is required' } }
+            validation: {
+              required: { value: true, message: 'Program is required' }
+            }
           },
-          { type: 'text', name: 'intake_month', label: 'Desired intake (e.g., Sep 2025)',
+          {
+            type: 'text',
+            name: 'intake_month',
+            label: 'Desired intake (e.g., Sep 2025)',
             placeholder: 'e.g., Sep 2025',
-            validation: { required: { value: true, message: 'Desired intake is required' } }
+            validation: {
+              required: { value: true, message: 'Desired intake is required' }
+            }
           },
-          { type: 'checkbox', name: 'consent',
+          {
+            type: 'checkbox',
+            name: 'consent',
             label: 'I agree to be contacted',
-            validation: { required: { value: true, message: 'You must agree to be contacted' } }
+            validation: {
+              required: { value: true, message: 'You must agree to be contacted' }
+            }
           }
         ],
         submitButtonText: 'Submit pre-enrolment',
         successMessage: "Thanks! We'll contact you shortly.",
         errorMessage: 'Something went wrong. Please try again.',
 
-        // IMPORTANT: transformer first/last → full_name avant envoi à l’action serveur
+        // Transform first_name + last_name → full_name before sending to the server action
         transformPayload: (values) => {
           const full_name =
             [values.first_name || '', values.last_name || ''].join(' ').trim();
@@ -110,7 +148,7 @@
       try {
         window.chatbase.registerFormSchema(ACTION_NAME, preEnrolmentSchema);
         registered = true;
-        console.log(`[chatbase] Schema registered for "${ACTION_NAME}"`);
+        console.log('[chatbase] Schema registered for "' + ACTION_NAME + '"');
       } catch (err) {
         console.error('[chatbase] Registration failed:', err);
       }
