--- a/index.html
+++ b/index.html
@@ -9,33 +9,18 @@
   <h1>Virtual School Demo</h1>
   <p>Test the EduSmartBot on this page.</p>
 
+  <!-- Try the standard Chatbase embed format -->
   <script>
-    (function(){
-      if(!window.chatbase||window.chatbase("getState")!=="initialized"){
-        window.chatbase=(...arguments)=>{
-          if(!window.chatbase.q){window.chatbase.q=[]}
-          window.chatbase.q.push(arguments)
-        };
-        window.chatbase=new Proxy(window.chatbase,{
-          get(target,prop){
-            if(prop==="q"){return target.q}
-            return(...args)=>target(prop,...args)
-          }
-        })
-      }
-      const onLoad=function(){
-        const script=document.createElement("script");
-        script.src="https://vschool.saasaigency.com/embed.min.js";
-        script.id="XVyXRXhG6vCPUR_KFObQL";
-        script.domain="vschool.saasaigency.com";
-        document.body.appendChild(script)
-      };
-      if(document.readyState==="complete"){
-        onLoad()
-      }else{
-        window.addEventListener("load",onLoad)
-      }
-    })();
+    window.embeddedChatbotConfig = {
+      chatbotId: "XVyXRXhG6vCPUR_KFObQL",
+      domain: "www.chatbase.co"
+    };
+  </script>
+  <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="XVyXRXhG6vCPUR_KFObQL"
+    domain="www.chatbase.co"
+    defer>
   </script>
 </body>
 </html>
