Refactor pre-enrolment schema to use object syntax

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Test the EduSmartBot on this page.</p>
   </main>
 
-  <!-- Chatbase Embed (working format) -->
+  <!-- Chatbase Embed -->
   <script>
     window.embeddedChatbotConfig = {
       chatbotId: "XVyXRXhG6vCPUR_KFObQL",
@@ -29,7 +29,7 @@
     defer>
   </script>
 
-  <!-- Custom Form Schema -->
+  <!-- Custom Form Schema (FIXED) -->
   <script>
   (function() {
     'use strict';
@@ -54,85 +54,84 @@
       }, interval);
     }
 
-    function preEnrolmentSchema() {
-      return {
-        fields: [
-          {
-            type: 'text',
-            name: 'first_name',
-            label: 'First name',
-            placeholder: 'Enter your first name',
-            validation: { required: { value: true, message: 'First name is required' } }
-          },
-          {
-            type: 'text',
-            name: 'last_name',
-            label: 'Last name',
-            placeholder: 'Enter your last name',
-            validation: { required: { value: true, message: 'Last name is required' } }
-          },
-          {
-            type: 'text',
-            name: 'email',
-            label: 'Email',
-            placeholder: 'you@example.com',
-            validation: { required: { value: true, message: 'Email is required' } }
-          },
-          {
-            type: 'text',
-            name: 'phone',
-            label: 'Phone (+CC…)',
-            placeholder: 'e.g., +971501234567',
-            validation: { required: { value: true, message: 'Phone number is required' } }
-          },
-          {
-            type: 'text',
-            name: 'program_interest',
-            label: 'Target program',
-            placeholder: 'e.g., Business Administration',
-            validation: { required: { value: true, message: 'Program is required' } }
-          },
-          {
-            type: 'text',
-            name: 'intake_month',
-            label: 'Desired intake (e.g., Sep 2025)',
-            placeholder: 'e.g., Sep 2025',
-            validation: { required: { value: true, message: 'Desired intake is required' } }
-          },
-          {
-            type: 'checkbox',
-            name: 'consent',
-            label: 'I agree to be contacted',
-            validation: { required: { value: true, message: 'You must agree to be contacted' } }
-          }
-        ],
-        submitButtonText: 'Submit pre-enrolment',
-        successMessage: "Thanks! We'll contact you shortly.",
-        errorMessage: 'Something went wrong. Please try again.',
-        transformPayload: (values) => ({
-          full_name: [values.first_name || '', values.last_name || ''].join(' ').trim(),
-          email: values.email,
-          phone: values.phone,
-          program_interest: values.program_interest,
-          intake_month: values.intake_month,
-          consent: !!values.consent
-        })
-      };
-    }
+    // Schema as OBJECT (not function)
+    const preEnrolmentSchema = {
+      fields: [
+        {
+          type: 'text',
+          name: 'first_name',
+          label: 'First name',
+          placeholder: 'Enter your first name',
+          validation: { required: { value: true, message: 'First name is required' } }
+        },
+        {
+          type: 'text',
+          name: 'last_name',
+          label: 'Last name',
+          placeholder: 'Enter your last name',
+          validation: { required: { value: true, message: 'Last name is required' } }
+        },
+        {
+          type: 'text',
+          name: 'email',
+          label: 'Email',
+          placeholder: 'you@example.com',
+          validation: { required: { value: true, message: 'Email is required' } }
+        },
+        {
+          type: 'text',
+          name: 'phone',
+          label: 'Phone (+CC…)',
+          placeholder: 'e.g., +971501234567',
+          validation: { required: { value: true, message: 'Phone number is required' } }
+        },
+        {
+          type: 'text',
+          name: 'program_interest',
+          label: 'Target program',
+          placeholder: 'e.g., Business Administration',
+          validation: { required: { value: true, message: 'Program is required' } }
+        },
+        {
+          type: 'text',
+          name: 'intake_month',
+          label: 'Desired intake (e.g., Sep 2025)',
+          placeholder: 'e.g., Sep 2025',
+          validation: { required: { value: true, message: 'Desired intake is required' } }
+        },
+        {
+          type: 'checkbox',
+          name: 'consent',
+          label: 'I agree to be contacted',
+          validation: { required: { value: true, message: 'You must agree to be contacted' } }
+        }
+      ],
+      submitButtonText: 'Submit pre-enrolment',
+      successMessage: "Thanks! We'll contact you shortly.",
+      errorMessage: 'Something went wrong. Please try again.',
+      transformPayload: (values) => ({
+        full_name: [values.first_name || '', values.last_name || ''].join(' ').trim(),
+        email: values.email,
+        phone: values.phone,
+        program_interest: values.program_interest,
+        intake_month: values.intake_month,
+        consent: !!values.consent
+      })
+    };
 
     function registerSchema() {
       if (registered) return;
       try {
         window.chatbase.registerFormSchema(ACTION_NAME, preEnrolmentSchema);
         registered = true;
-        console.log('[chatbase] Schema registered for "' + ACTION_NAME + '"');
+        console.log('[chatbase] ✅ Schema registered for "' + ACTION_NAME + '"');
       } catch (err) {
-        console.error('[chatbase] Registration failed:', err);
+        console.error('[chatbase] ❌ Registration failed:', err);
       }
     }
 
     window.addEventListener('load', () => {
-      setTimeout(() => waitForChatbase(registerSchema), 1000);
+      setTimeout(() => waitForChatbase(registerSchema), 1500);
     });
   })();
   </script>
