Fix form schema registration and update field definitions
Updated the form schema registration to use the correct format and added detailed field definitions directly in the registration function.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
     defer>
   </script>
 
-  <!-- Custom Form Schema (FIXED) -->
+  <!-- Custom Form Schema (CORRECT FORMAT) -->
   <script>
   (function() {
     'use strict';
 
-    const ACTION_NAME = 'pre_enrolment_form';
     let registered = false;
 
     function waitForChatbase(callback, maxAttempts = 100, interval = 200) {
@@ -54,77 +53,79 @@
       }, interval);
     }
 
-    // Schema as OBJECT (not function)
-    const preEnrolmentSchema = {
-      fields: [
-        {
-          type: 'text',
-          name: 'first_name',
-          label: 'First name',
-          placeholder: 'Enter your first name',
-          validation: { required: { value: true, message: 'First name is required' } }
-        },
-        {
-          type: 'text',
-          name: 'last_name',
-          label: 'Last name',
-          placeholder: 'Enter your last name',
-          validation: { required: { value: true, message: 'Last name is required' } }
-        },
-        {
-          type: 'text',
-          name: 'email',
-          label: 'Email',
-          placeholder: 'you@example.com',
-          validation: { required: { value: true, message: 'Email is required' } }
-        },
-        {
-          type: 'text',
-          name: 'phone',
-          label: 'Phone (+CC…)',
-          placeholder: 'e.g., +971501234567',
-          validation: { required: { value: true, message: 'Phone number is required' } }
-        },
-        {
-          type: 'text',
-          name: 'program_interest',
-          label: 'Target program',
-          placeholder: 'e.g., Business Administration',
-          validation: { required: { value: true, message: 'Program is required' } }
-        },
-        {
-          type: 'text',
-          name: 'intake_month',
-          label: 'Desired intake (e.g., Sep 2025)',
-          placeholder: 'e.g., Sep 2025',
-          validation: { required: { value: true, message: 'Desired intake is required' } }
-        },
-        {
-          type: 'checkbox',
-          name: 'consent',
-          label: 'I agree to be contacted',
-          validation: { required: { value: true, message: 'You must agree to be contacted' } }
-        }
-      ],
-      submitButtonText: 'Submit pre-enrolment',
-      successMessage: "Thanks! We'll contact you shortly.",
-      errorMessage: 'Something went wrong. Please try again.',
-      transformPayload: (values) => ({
-        full_name: [values.first_name || '', values.last_name || ''].join(' ').trim(),
-        email: values.email,
-        phone: values.phone,
-        program_interest: values.program_interest,
-        intake_month: values.intake_month,
-        consent: !!values.consent
-      })
-    };
-
     function registerSchema() {
       if (registered) return;
       try {
-        window.chatbase.registerFormSchema(ACTION_NAME, preEnrolmentSchema);
+        window.chatbase.registerFormSchema({
+          pre_enrolment_form: async (args, user) => {
+            console.log('[chatbase] Form triggered with args:', args);
+            return {
+              fields: [
+                {
+                  name: 'first_name',
+                  label: 'First name',
+                  type: 'text',
+                  placeholder: 'Enter your first name',
+                  validation: { required: { value: true, message: 'First name is required' } }
+                },
+                {
+                  name: 'last_name',
+                  label: 'Last name',
+                  type: 'text',
+                  placeholder: 'Enter your last name',
+                  validation: { required: { value: true, message: 'Last name is required' } }
+                },
+                {
+                  name: 'email',
+                  label: 'Email',
+                  type: 'text',
+                  placeholder: 'you@example.com',
+                  validation: { required: { value: true, message: 'Email is required' } }
+                },
+                {
+                  name: 'phone',
+                  label: 'Phone (+CC…)',
+                  type: 'text',
+                  placeholder: 'e.g., +971501234567',
+                  validation: { required: { value: true, message: 'Phone number is required' } }
+                },
+                {
+                  name: 'program_interest',
+                  label: 'Target program',
+                  type: 'text',
+                  placeholder: 'e.g., Business Administration',
+                  validation: { required: { value: true, message: 'Program is required' } }
+                },
+                {
+                  name: 'intake_month',
+                  label: 'Desired intake (e.g., Sep 2025)',
+                  type: 'text',
+                  placeholder: 'e.g., Sep 2025',
+                  validation: { required: { value: true, message: 'Desired intake is required' } }
+                },
+                {
+                  name: 'consent',
+                  label: 'I agree to be contacted',
+                  type: 'checkbox',
+                  validation: { required: { value: true, message: 'You must agree to be contacted' } }
+                }
+              ],
+              submitButtonText: 'Submit pre-enrolment',
+              successMessage: "Thanks! We'll contact you shortly.",
+              errorMessage: 'Something went wrong. Please try again.',
+              transformPayload: (values) => ({
+                full_name: [values.first_name || '', values.last_name || ''].join(' ').trim(),
+                email: values.email,
+                phone: values.phone,
+                program_interest: values.program_interest,
+                intake_month: values.intake_month,
+                consent: !!values.consent
+              })
+            };
+          }
+        });
         registered = true;
-        console.log('[chatbase] ✅ Schema registered for "' + ACTION_NAME + '"');
+        console.log('[chatbase] ✅ Schema registered for "pre_enrolment_form"');
       } catch (err) {
         console.error('[chatbase] ❌ Registration failed:', err);
       }
